--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -14,14 +14,24 @@ const socialLinks: {
 }[] = [
 	{
 		friendlyName: "Github",
-		link: "https://github.com/chrismwilliams/astro-cactus",
+		link: "https://github.com/mackiser",
 		name: "mdi:github",
+	},
+	{
+		friendlyName: "Instagram",
+		link: "https://instagram.com/resikcam",
+		name: "mdi:instagram",
+	},
+	{
+		friendlyName: "Letterboxd",
+		link: "https://letterboxd.com/mackiser",
+		name: "cib:letterboxd",
 	},
 ];
 ---
 
 <div class="flex flex-wrap items-end gap-x-2">
-	<p>Find me on</p>
+	<p>Find me on:</p>
 	<ul class="flex flex-1 items-center gap-x-2 sm:flex-initial">
 		{
 			socialLinks.map(({ friendlyName, isWebmention, link, name }) => (
@@ -32,7 +42,7 @@ const socialLinks: {
 						rel={`noreferrer ${isWebmention ? "me authn" : ""}`}
 						target="_blank"
 					>
-						<Icon aria-hidden="true" class="h-8 w-8" focusable="false" name={name} />
+						<Icon aria-hidden="true" class="h-7 w-7" focusable="false" name={name} />
 						<span class="sr-only">{friendlyName}</span>
 					</a>
 				</li>
