--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,44 +4,29 @@ import aboutImg from "@/assets/about-astro.png";
 import PageLayout from "@/layouts/Base.astro";
 
 const meta = {
-	description: "I'm a starter theme for Astro.build",
+	description: "About mackiser.github.io",
 	title: "About",
 };
 ---
 
 <PageLayout meta={meta}>
 	<div class="space-y-6">
-		<h1 class="title">About</h1>
+		<h1 class="title">Yo! 👋</h1>
+		<h1 class="title">I'm McKinley, but I go by Mac for short.</h1>
 		<p>
-			Hi, I’m a starter Astro. I’m particularly great for getting you started with your own blogging
-			website.
+			This site acts as a personal blog, but I really only use it to post writeups for penetration
+			testing labs and scripting stuff. FYI… I do not update this site super often.
 		</p>
-		<div class="flex justify-center">
-			<Image
-				alt="A cartoon cactus looking at the 'Astro.build' logo"
-				fetchpriority="high"
-				loading="eager"
-				src={aboutImg}
-			/>
-		</div>
-		<p>Here are my some of my awesome built in features:</p>
-		<ul class="list-inside list-disc">
-			<li>I'm ultra fast as I'm a static site</li>
-			<li>I'm fully responsive</li>
-			<li>I come with a light and dark mode</li>
-			<li>I'm easy to customise and add additional content</li>
-			<li>I have Tailwind CSS styling</li>
-			<li>Shiki code syntax highlighting</li>
-			<li>Satori for auto generating OG images for blog posts</li>
+		<h2 class="title">More About Me</h2>
+		<p>Outside of technology stuff, some of my other hobbies are:</p>
+		<ul class="list-disc">
+			<li><a class="cactus-link" href="https://app.utrsports.net/profiles/4738858">tennis</a></li>
+			<li>skiing</li>
+			<li>
+				<a class="cactus-link" href="https://www.goodreads.com/user/show/143951289-mac-kiser"
+					>reading</a>
+			</li>
+			<li><a class="cactus-link" href="https://letterboxd.com/mackiser/">cinema</a></li>
 		</ul>
-		<p>
-			Clone or fork my <a
-				aria-label="github repository"
-				class="cactus-link inline-block"
-				href="https://github.com/chrismwilliams/astro-cactus"
-				rel="noreferrer"
-				target="_blank">repo</a
-			> if you like me!
-		</p>
 	</div>
 </PageLayout>
