--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Hello, my name is Mac.</h1>
 		<p class="mb-4">
-			This site acts as a personal blog, but I really only use it to post writeups for penetration
-			testing labs and scripting stuff. FYI… I do not update this site <b>super</b> often.
+			I'm a cybersecurity student, tennis player, cinema enjoyer, and Orioles baseball fanactic.
 		</p>
 		<SocialList />
 	</section>
