--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Hello, my name is Mac.</h1>
 		<p class="mb-4">
-			I'm a cybersecurity professional, husband, tennis player, cinema enjoyer, and Orioles baseball fanactic.
+			I'm a cybersecurity professional, tennis player, cinema enjoyer, and Orioles baseball fanactic.
 		</p>
 		<SocialList />
 	</section>
